CMAKE_MINIMUM_REQUIRED(VERSION 3.8 FATAL_ERROR)
PROJECT(KokkosNVCCWrapper CXX CUDA)
SET(KokkosNVCCWrapper_VERSION_MAJOR 2)
SET(KokkosNVCCWrapper_VERSION_MINOR 7)
SET(KokkosNVCCWrapper_VERSION_PATCH 4)

IF (CMAKE_CUDA_HOST_COMPILER)
SET(KOKKOS_CXX ${CMAKE_CUDA_HOST_COMPILER})
ELSE()
SET(KOKKOS_CXX ${CMAKE_CXX_COMPILER})
ENDIF()

CONFIGURE_FILE(nvcc_wrapper.in nvcc_wrapper @ONLY)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/nvcc_wrapper 
 DESTINATION bin
 PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE)

